--- a/public/css/global.css
+++ b/public/css/global.css
@@ -12,8 +12,20 @@
   --light: #ffffff;
   --success: #188918;
   --error: #9b1b12;
-  --warning: #bf8705;
+  --warning: #ffbe27;
   --info: #008084;
+}
+
+.btn.btn-warning{
+  background: var(--warning);
+  border-color: var(--warning);
+  color: var(--text-white);
+}
+
+.btn.btn-danger{
+  background: var(--error);
+  border-color: var(--error);
+  color: var(--text-white);
 }
 
 .amsted {
